--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,13 @@
 <% content_for :content do %>
   <div class="container">
     <header class="header">
-      <h1 class="logotipo"> <a href="#">Redu Educational Technologies</a> </h1>
+      <h1 class="logotipo"> <a href="http://tech.redu.com.br">Redu Educational Technologies</a>  </h1>
       <nav class="nav">
         <ul>
-          <li> <a href="#">Nossa missão</a></li>
-          <li> <a href="#">Nosso produto</a></li>
-          <li> <a href="#">Equipe</a></li>
-          <li> <a href="#">Encontre-nos</a></li>
+          <li> <a href="#mission">Nossa missão</a></li>
+          <li> <a href="#product">Nosso produto</a></li>
+          <li> <a href="#team">Equipe</a></li>
+          <li> <a href="#contact-us">Encontre-nos</a></li>
         </ul>
       </nav>
   </header>
@@ -21,7 +21,7 @@
   </div><!-- end .call-wrapper -->
   <div class="container">
   <div class="main" role="main">
-    <section>
+    <section id="mission">
     <h3>Nossa missão</h3>
     <blockquote>
       <p>Oportunizar a riqueza através do conhecimento e promover a evolução das práticas da educação de forma criativa e sustentável.</p>
@@ -31,18 +31,20 @@
     </p>
     </section>
 
-    <section>
+    <section id="product">
       <h3>Nosso produto</h3>
-      <img src="/img/redu-thumb.png" class="product-img" alt="redu" >
+      <a href="http://www.redu.com.br">
+        <img src="/img/redu-thumb.png" class="product-img" alt="redu" >
+      </a>
       <p>O Redu é uma plataforma de ensino a distância que foi construída tendo como base as interações sociais, com diversas possibilidades de cooperação e aprendizagem: vídeo-aulas, artigos, documentos, exercícios, espaço para discussões, comunicação em tempo real (e muito mais).</p>
       <ul class="product-links">
-      	<li> <a href="#">Blog do Redu</a> </li>
-      	<li> <a href="#">Termos de uso</a> </li>
-      	<li> <a href="#">Política de privacidade</a> </li>
+      	<li> <a href="http://blog.redu.com.br">Blog do Redu</a> </li>
+      	<li> <a href="http://www.redu.com.br/tos">Termos de uso</a> </li>
+      	<li> <a href="http://www.redu.com.br/privacy">Política de privacidade</a> </li>
       </ul>
     </section>
 
-    <section>
+    <section id="team">
       <h3>Equipe</h3>
       <p>Multidisciplinar, criativa, colaborativa e focada. Nós incorporamos o espírito startup de ser: trabalhamos com sinergia, alegria e nunca estamos satisfeitos.</p>
 
@@ -50,14 +52,14 @@
         <li>
           <img src="/img/membros-deds.png">
           <h5>
-            <a href="#">André <span class="ln">Diniz de Moraes</span> </a>
+            <a href="http://www.redu.com.br/pessoas/andremoraes/">André <span class="ln">Diniz de Moraes</span> </a>
           </h5>
           <strong>Gerente de Projetos</strong>
         </li>
         <li>
           <img src="/img/membros-guila.png">
           <h5>
-            <a href="#">Guilherme <span class="ln">Cavalcanti</span> </a>
+            <a href="http://redu.com.br/pessoas/guiocavalcanti">Guilherme <span class="ln">Cavalcanti</span> </a>
           </h5>
           <strong>Líder técnico</strong>
         </li>
@@ -71,98 +73,98 @@
         <li>
           <img src="/img/membros-ands.png">
           <h5>
-            <a href="#">Anderson <span class="ln">Duarte</span> </a>
+            <a href="http://redu.com.br/pessoas/andersonduarte">Anderson <span class="ln">Duarte</span> </a>
           </h5>
           <strong>Diretor Executivo</strong>
         </li>
         <li>
           <img src="/img/membros-jubs.png">
           <h5>
-            <a href="#">Juliana <span class="ln">Lucena</span> </a>
+            <a href="http://www.redu.com.br/pessoas/julianalucena">Juliana <span class="ln">Lucena</span> </a>
           </h5>
           <strong>Líder técnico</strong>
         </li>
         <li>
           <img src="/img/membros-txi.png">
           <h5>
-            <a href="#">Tiago <span class="ln">Ferreira</span> </a>
+            <a href="http://www.redu.com.br/pessoas/tiago">Tiago <span class="ln">Ferreira</span> </a>
           </h5>
           <strong>Líder técnico</strong>
         </li>
         <li>
           <img src="/img/membros-sergio.png">
           <h5>
-            <a href="#">Sérgio <span class="ln">Fontes</span></a>
+            <a href="http://www.redu.com.br/pessoas/sergiofontes">Sérgio <span class="ln">Fontes</span></a>
           </h5>
           <strong>Designer</strong>
         </li>
         <li>
           <img src="/img/membros-brunno.png">
           <h5>
-            <a href="#">Brunno <span class="ln">Gomes</span></a>
+            <a href="http://www.redu.com.br/pessoas/brunno">Brunno <span class="ln">Gomes</span></a>
           </h5>
           <strong>Desenvolvedor</strong>
         </li>
         <li>
           <img src="/img/membros-thais.png">
           <h5>
-            <a href="#">Thaís <span class="ln">Bione</span></a>
+            <a href="http://redu.com.br/pessoas/thaisbione">Thaís <span class="ln">Bione</span></a>
           </h5>
           <strong>Desenvolvedor de front-end</strong>
         </li>
         <li>
           <img src="/img/membros-tacsio.png">
           <h5>
-            <a href="#">Tarcisio <span class="ln">Coutinho</span></a>
+            <a href="http://www.redu.com.br/pessoas/tacsio">Tarcisio <span class="ln">Coutinho</span></a>
           </h5>
           <strong>Desenvolvedor</strong>
         </li>
         <li>
           <img src="/img/membros-varjao.png">
           <h5>
-            <a href="#">Filipe <span class="ln">Varjão</span></a>
+            <a href="http://www.redu.com.br/pessoas/filipev">Filipe <span class="ln">Varjão</span></a>
           </h5>
           <strong>Desenvolvedor</strong>
         </li>
         <li>
           <img src="/img/membros-jess.png">
           <h5>
-            <a href="#">Jéssica <span class="ln">Barbalho</span></a>
+            <a href="http://redu.com.br/pessoas/jessicab">Jéssica <span class="ln">Barbalho</span></a>
           </h5>
           <strong>Desenvolvedora</strong>
         </li>
         <li>
           <img src="/img/membros-matheus.png">
           <h5>
-            <a href="#">Matheus <span class="ln">Santana</span></a>
+            <a href="http://redu.com.br/pessoas/edmatheus">Matheus <span class="ln">Santana</span></a>
           </h5>
           <strong>Desenvolvedor</strong>
         </li>
         <li>
           <img src="/img/membros-wands.png">
           <h5>
-            <a href="#">Filipe <span class="ln">Wanderley Lima</span></a>
+            <a href="http://www.redu.com.br/pessoas/filipewl">Filipe <span class="ln">Wanderley Lima</span></a>
           </h5>
           <strong>Desenvolvedor de front-end</strong>
         </li>
         <li>
           <img src="/img/membros-diana.png">
           <h5>
-            <a href="#">Diana <span class="ln">Lins</span></a>
+            <a href="http://www.redu.com.br/pessoas/dianalins">Diana <span class="ln">Lins</span></a>
           </h5>
           <strong>Designer</strong>
         </li>
       </ul>
     </section>
 
-    <section>
+    <section id="contact-us">
       <h3>Encontre-nos</h3>
       <address>
         Rua do Apolo, 181<br>
         Cais do Apolo – Núcleo de Gestão do Porto Digital<br>
       </address>
       <address>
-        E-mail: contato@redutech.com.br<br>
+        E-mail: contato@redu.com.br<br>
         Telefone: +55 (81) 3419 8110<br>
         CNPJ: 12.359.885/0001-07<br>
       </address>
