facebook thumbnail and GA code.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -33,6 +33,7 @@
   <%= javascript_include_tag 'http://use.typekit.com/lpo4rgu.js' %>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <%= favicon_tag 'favicon.ico' %>
+  <link rel="image_src" type="image/gif" href="img/redutech-simbolo-noshad.gif">
 </head>
 
 <body>
@@ -74,12 +75,18 @@
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
   <script defer src="js/script.js"></script>
 
-  <!-- Change UA-XXXXX-X to be your site's ID -->
-  <script>
-    window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
-    Modernizr.load({
-      load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
-    });
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-13202852-4']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
   </script>
 
 
