--- a/source/css/application.css.scss
+++ b/source/css/application.css.scss
@@ -47,6 +47,7 @@ $gray5:                       rgba(179, 179, 179, 1) !default;
 $gray6:                       rgba(109, 110, 111, 1) !default;
 
 body {
+  background: $gray1;
   text-align: center;
   font-family: heveltica, arial, sans-serif;
   font-size: 12px;
@@ -107,7 +108,7 @@ a:active {
 
     font-family: "museo-sans",sans-serif;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 500;
     font-size: 14px;
     width: 395px;
     float: right;
@@ -164,10 +165,10 @@ a:active {
 
     padding: 0;
     margin: 0;
-    margin-top: 60px;
-    margin-bottom: 30px;
+    margin-top: 52px;
+    margin-bottom: 20px;
     width: 580px;
-    line-height: 50px;
+    line-height: 48px;
     font-size: 48px;
     font-family: "museo-sans",sans-serif;
     font-style: normal;
@@ -189,6 +190,7 @@ a:active {
     font-family: "museo-sans",sans-serif;
     font-style: normal;
     font-weight: 500;
+    line-height: 20px;
     float: left;
   }
 }
