--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -53,6 +53,8 @@
       <ul>
       <li> <a href="http://www.redu.com.br">Redu</a> </li>
       <li> <a href="http://blog.redu.com.br">Blog do Redu</a> </li>
+      <li> <a href="http://blog.redu.com.br">Termos de Uso</a> </li>
+      <li> <a href="http://blog.redu.com.br">Políticas de Privacidade</a> </li>
       </ul>
     </div>
     <div class="redu-tech-nav">
