--- a/source/css/application.css.scss
+++ b/source/css/application.css.scss
@@ -105,6 +105,7 @@ a:active { color: $blue2; }
     float: left;
     margin: 0;
     margin-bottom: 13px;
+    margin-left: 10px;
 
     a {
       display: block;
@@ -172,7 +173,7 @@ a:active { color: $blue2; }
 
   .multiplebgs & {
     background-image: url("../img/redutech-graph.png"), url("../img/bkg-green-1.png"), url("../img/bkg-green-2.png"), url("../img/bkg-green-3.png");
-    background-position: 0 60px, 0 0, 970px 0, 1020px 0;
+    background-position: -10px 60px, 0 0, 970px 0, 1020px 0;
     background-repeat: no-repeat;
     background-color: transparent;
   }
@@ -182,7 +183,7 @@ a:active { color: $blue2; }
     margin: 0 auto;
     width: 960 - 140px;
     height: 300px;
-    padding-left: 140px;
+    padding-left: 126px;
   }
 
   .header-call {
