Alterações de identação e href após revisão

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -40,7 +40,7 @@
 
       <ul class="team">
         <li class="member-left">
-          <a href="http://#">
+          <a href="http://www.redu.com.br/pessoas/andremoraes/">
             <img src="/img/membros-deds.png">
           </a>
           <h5>
@@ -49,7 +49,7 @@
           <strong>Gerente de Projetos</strong>
         </li>
         <li>
-          <a href="http://#">
+          <a href="http://redu.com.br/pessoas/guiocavalcanti">
             <img src="/img/membros-guila.png">
           </a>
           <h5>
@@ -67,7 +67,7 @@
           <strong>Pesquisador</strong>
         </li>
         <li>
-          <a href="http://#">
+          <a href="http://redu.com.br/pessoas/andersonduarte">
             <img src="/img/membros-ands.png">
           </a>
           <h5>
@@ -76,7 +76,7 @@
           <strong>Diretor Executivo</strong>
         </li>
         <li class="member-left">
-          <a href="http://#">
+          <a href="http://www.redu.com.br/pesspas/julianalucena">
             <img src="/img/membros-jubs.png">
           </a>
           <h5>
@@ -85,7 +85,7 @@
           <strong>Líder técnico</strong>
         </li>
         <li>
-          <a href="http://#">
+          <a href="http://www.redu.com.br/pessoas/tiago">
             <img src="/img/membros-txi.png">
           </a>
           <h5>
@@ -94,7 +94,7 @@
           <strong>Líder técnico</strong>
         </li>
         <li>
-          <a href="http://#">
+          <a href="http://www.redu.com.br/pessoas/sergiofontes">
             <img src="/img/membros-sergio.png">
           </a>
           <h5>
@@ -103,7 +103,7 @@
           <strong>Designer</strong>
         </li>
         <li>
-          <a href="http://#">
+          <a href="http://www.redu.com.br/pessoas/brunno">
             <img src="/img/membros-brunno.png">
           </a>
           <h5>
@@ -112,7 +112,7 @@
           <strong>Desenvolvedor</strong>
         </li>
         <li class="member-left">
-          <a href="http://#">
+          <a href="http://redu.com.br/pessoas/thaisbione">
             <img src="/img/membros-thais.png">
           </a>
           <h5>
@@ -121,7 +121,7 @@
           <strong>Desenvolvedora de front-end</strong>
         </li>
         <li>
-          <a href="http://#">
+          <a href="http://www.redu.com.br/pessoas/tacsio">
             <img src="/img/membros-tacsio.png">
           </a>
           <h5>
@@ -130,7 +130,7 @@
           <strong>Desenvolvedor</strong>
         </li>
         <li>
-          <a href="http://#">
+          <a href="http://redu.com.br/pessoas/jessicab">
             <img src="/img/membros-jess.png">
           </a>
           <h5>
@@ -139,7 +139,7 @@
           <strong>Desenvolvedora</strong>
         </li>
         <li>
-          <a href="http://#">
+          <a href="http://redu.com.br/pessoas/edmatheus">
             <img src="/img/membros-matheus.png">
           </a>
           <h5>
@@ -148,7 +148,7 @@
           <strong>Desenvolvedor</strong>
         </li>
         <li class="member-left">
-          <a href="http://#">
+          <a href="http://www.redu.com.br/pessoas/filipewl">
             <img src="/img/membros-wands.png">
           </a>
           <h5>
@@ -157,7 +157,7 @@
           <strong>Desenvolvedor de front-end</strong>
         </li>
         <li>
-          <a href="http://#">
+          <a href="http://www.redu.com.br/pessoas/dianalins">
             <img src="/img/membros-diana.png">
           </a>
           <h5>
