--- a/source/css/application.css.scss
+++ b/source/css/application.css.scss
@@ -78,7 +78,6 @@ a:active { color: $blue2; }
   text-align: left;
   width: 960px;
   margin: 0 auto;
-
   background: url("../img/redutech-graph.png") no-repeat -40px 200px;
 
   .call-to-army {
@@ -160,7 +159,10 @@ a:active { color: $blue2; }
     }
 
     li:first-child { padding-left: 0; }
-    li:last-child { padding-right: 0; border: none; }
+    li:last-child {
+      padding-right: 0;
+      border: none;
+    }
   }
 
   .hack {
@@ -234,7 +236,10 @@ a:active { color: $blue2; }
     }
 
     li:first-child { padding-left: 0; }
-    li:last-child { padding-right: 0; border: none; }
+    li:last-child {
+      padding-right: 0;
+      border: none;
+    }
   }
 
   h3 {
@@ -275,7 +280,8 @@ a:active { color: $blue2; }
     }
 
     &#product  {
-      background: $gray1; //Guila, misteriosamente a bola feita de circulos menores estava aparecendo no espaço em que há padding. Eis o motivo de definir o background.
+      // Esconder a  aparição misteriosa da bola (imagem) utilizada na div call-wrapper
+      background: $gray1;
       .link-logo {
         float: left;
         padding-bottom: 2px;
@@ -326,19 +332,15 @@ a:active { color: $blue2; }
     float: left;
   }
 
-  address + address { margin-left: 20px; } //Apenas inserir margem na esquerda do segundo elemento para que caiba na largura definida pelo designer
+  address + address { margin-left: 20px; }
 
   .product-img {
     float: left;
     margin-right: 20px;
-    .boxshadow & {
-      @include single-box-shadow($gray4, 0, 1px, 3px, 1px);
-    }
+    .boxshadow & { @include single-box-shadow($gray4, 0, 1px, 3px, 1px); }
     &:hover {
       border-color: $blue2;
-      .boxshadow & {
-        @include single-box-shadow($blue4, 0, 1px, 3px, 1px);
-      }
+      .boxshadow & { @include single-box-shadow($blue4, 0, 1px, 3px, 1px); }
     }
   }
 
@@ -360,23 +362,19 @@ a:active { color: $blue2; }
 
       &:nth-child(4n) { margin-right: 0; }
 
-      &.member-left { //member-left foi uma classe criada para remover margem à esquerda dos primeiros elementos de cada linha, para que caiba na largura definida pelo designer
+      //classe criada para remover margem à esquerda dos primeiros elementos de cada linha
+      &.member-left {
         clear: left;
         margin-left: 0;
       }
       img {
-        .boxshadow & {
-          @include single-box-shadow($gray4, 0, 1px, 2px, 2px);
-        }
+        .boxshadow & { @include single-box-shadow($gray4, 0, 1px, 2px, 2px); }
         &:hover {
           border-color: $blue2;
-          .boxshadow & {
-            @include single-box-shadow(rgba(21,138,196,0.5), 0, 1px, 2px, 2px);
-          }
+          .boxshadow & { @include single-box-shadow(rgba(21,138,196,0.5), 0, 1px, 2px, 2px); }
         }
       }
     }
-
 
     h5 {
       font-size:18px;
@@ -411,7 +409,7 @@ a:active { color: $blue2; }
     width: 338px;
   }
 
-  .office  + .office { margin-left: 18px; } // Apenas inserir margem na esquerda da segunda foto para que caiba na largura definida pelo designer
+  .office  + .office { margin-left: 18px; }
 
   .office-big { width: 696px; }
 }
@@ -489,7 +487,8 @@ a:active { color: $blue2; }
   .redu-tech-nav { width: 140px; }
 }
 
-.link-hover { // CSS criado para aplicar regras no nome do membro da equipe quando houver hover na foto do mesmo.
+//Inserir estado hover nos membros quando cursor estiver sobre sua foto
+.link-hover {
   color: $blue4 !important;
   font-weight: 500 !important;
 }
