Atualizando o endereco e telefone.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -171,13 +171,12 @@
     <section id="contact-us">
       <h3>Encontre-nos</h3>
       <address>
-        Rua do Apolo, 181<br>
-        Cais do Apolo – Núcleo de Gestão do Porto Digital<br>
+        Av. Barbosa Lima, 149, salas 412-413<br>
         Recife, Pernambuco, Brasil
       </address>
       <address>
         E-mail: contato@redu.com.br<br>
-        Telefone: +55 (81) 3419 8110<br>
+        Telefone: +55 (81) 3224 2994<br>
         CNPJ: 12.359.885/0001-07<br>
       </address>
       <img src="/img/toyarts.png" class="office" alt="" />
