--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -44,8 +44,8 @@
     <h1 class="footer-logotipo"> <a href="http://tech.redu.com.br">Redu Educational Technologies</a> </h1>
     <p class="about-us">Somos uma startup brasileira, recifense e estamos embarcados no Porto Digital. Nossa equipe é composta por pessoas dedicadas e comprometidas com um objetivo em comum: desenvolver produtos que façam a diferença para uma educação mais acessível e universal.</p>
     <address>
-      Rua do Apolo, 181<br>
-      Cais do Apolo, Recife, Brasil<br>
+      Av. Barbosa Lima, 149, salas 412-413<br>
+      Recife, Brasil<br>
       CNPJ: 12.359.885/0001-07<br>
     </address>
     <div class="redu-nav">
