Deixando somente sala 412.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -171,7 +171,7 @@
     <section id="contact-us">
       <h3>Encontre-nos</h3>
       <address>
-        Av. Barbosa Lima, 149, salas 412-413<br>
+        Av. Barbosa Lima, 149, sala 412<br>
         Recife, Pernambuco, Brasil
       </address>
       <address>
