Remoção dados de Tarcísio, Inserção de Igor e atualização da versão do middleman

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -121,15 +121,6 @@
           <strong>Desenvolvedora de front-end</strong>
         </li>
         <li>
-          <a href="http://www.redu.com.br/pessoas/tacsio">
-            <img src="/img/membros-tacsio.png">
-          </a>
-          <h5>
-            <a href="http://www.redu.com.br/pessoas/tacsio">Tarcisio <span class="ln">Coutinho</span></a>
-          </h5>
-          <strong>Desenvolvedor</strong>
-        </li>
-        <li>
           <a href="http://redu.com.br/pessoas/jessicab">
             <img src="/img/membros-jess.png">
           </a>
@@ -147,7 +138,7 @@
           </h5>
           <strong>Desenvolvedor</strong>
         </li>
-        <li class="member-left">
+        <li>
           <a href="http://www.redu.com.br/pessoas/filipewl">
             <img src="/img/membros-wands.png">
           </a>
@@ -156,7 +147,7 @@
           </h5>
           <strong>Desenvolvedor de front-end</strong>
         </li>
-        <li>
+        <li  class="member-left">
           <a href="http://www.redu.com.br/pessoas/dianalins">
             <img src="/img/membros-diana.png">
           </a>
@@ -164,6 +155,15 @@
             <a href="http://www.redu.com.br/pessoas/dianalins">Diana <span class="ln">Lins</span></a>
           </h5>
           <strong>Designer</strong>
+        </li>
+        <li>
+          <a href="http://www.redu.com.br/pessoas/igorcalabria">
+            <img src="/img/membros-igor.png">
+          </a>
+          <h5>
+            <a href="http://www.redu.com.br/pessoas/igorcalabria">Igor <span class="ln">Calabria</span></a>
+          </h5>
+          <strong>Desenvolvedor</strong>
         </li>
       </ul>
     </section>
