Adição novos membros do Redu e inserindo o papel de líder técnico para Wandinho

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -145,7 +145,7 @@
           <h5>
             <a href="http://www.redu.com.br/pessoas/filipewl">Filipe <span class="ln">Wanderley Lima</span></a>
           </h5>
-          <strong>Desenvolvedor de front-end</strong>
+          <strong>Líder técnico</strong>
         </li>
         <li class="member-left">
           <a href="http://www.redu.com.br/pessoas/igorcalabria">
@@ -156,7 +156,44 @@
           </h5>
           <strong>Desenvolvedor</strong>
         </li>
+        <li>
+          <a href="http://www.redu.com.br/pessoas/caolivee">
+            <img src="/img/membros-cassia.png">
+          </a>
+          <h5>
+            <a href="http://www.redu.com.br/pessoas/caolivee">Cássia <span class="ln">Oliveira</span></a>
+          </h5>
+          <strong>Designer</strong>
+        </li>
+        <li>
+          <a href="http://www.redu.com.br/pessoas/imahtmoura">
+            <img src="/img/membros-thamires.png">
+          </a>
+          <h5>
+            <a href="http://www.redu.com.br/pessoas/imahtmoura">Thamires <span class="ln">Moura</span></a>
+          </h5>
+          <strong>Oráculo</strong>
+        </li>
+        <li>
+          <a href="http://www.redu.com.br/pessoas/brennbarros">
+            <img src="/img/membros-brenda.png">
+          </a>
+          <h5>
+            <a href="http://www.redu.com.br/pessoas/brennbarros">Brenda <span class="ln">Barros</span></a>
+          </h5>
+          <strong>Designer</strong>
+        </li>
+        <li class="member-left">
+          <a href="http://www.redu.com.br/pessoas/brunomachado">
+            <img src="/img/membros-bruno.png">
+          </a>
+          <h5>
+            <a href="http://www.redu.com.br/pessoas/brunomachado">Bruno <span class="ln">Machado</span></a>
+          </h5>
+          <strong>Desenvolvedor de front-end</strong>
+        </li>
       </ul>
+
     </section>
 
     <section id="contact-us">
