Adiciona membros do time mobile

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -182,7 +182,25 @@
             <a href="http://www.redu.com.br/pessoas/brunomachado">Bruno <span class="ln">Machado</span></a>
           </h5>
           <strong>Desenvolvedor de front-end</strong>
-        </li
+        </li>
+        <li class="member-left">
+          <a href="http://www.redu.com.br/pessoas/rgcrocha">
+            <img src="/img/membros-rodrigo.png">
+          </a>
+          <h5>
+            <a href="http://www.redu.com.br/pessoas/rgcrocha">Rodrigo <span class="ln">Rocha</span></a>
+          </h5>
+          <strong>Desenvolvedor Mobile</strong>
+        </li>
+         <li>
+          <a href="http://www.redu.com.br/pessoas/thiagosoaraa">
+            <img src="/img/membros-thiago.png">
+          </a>
+          <h5>
+            <a href="http://www.redu.com.br/pessoas/thiagosoara">Thiago <span class="ln">Araújo</span></a>
+          </h5>
+          <strong>Desenvolvedor Mobile</strong>
+        </li>
       </ul>
 
     </section>
