--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -199,7 +199,7 @@
           <h5>
             <a href="http://www.redu.com.br/pessoas/thiagosoara">Thiago <span class="ln">Araújo</span></a>
           </h5>
-          <strong>Desenvolvedor Mobile</strong>
+          <strong>Líder Técnico Mobile</strong>
         </li>
       </ul>
 
