conserta link para perfil

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -193,7 +193,7 @@
           <strong>Desenvolvedor Mobile</strong>
         </li>
          <li>
-          <a href="http://www.redu.com.br/pessoas/thiagosoaraa">
+          <a href="http://www.redu.com.br/pessoas/thiagosoara">
             <img src="/img/membros-thiago.png">
           </a>
           <h5>
