Remove Brunno, Adiciona Gregory e remove fotos dos antigos membros que estavam na pasta de imagens

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -103,15 +103,6 @@
           <strong>Designer</strong>
         </li>
         <li>
-          <a href="http://www.redu.com.br/pessoas/brunno">
-            <img src="/img/membros-brunno.png">
-          </a>
-          <h5>
-            <a href="http://www.redu.com.br/pessoas/brunno">Brunno <span class="ln">Gomes</span></a>
-          </h5>
-          <strong>Desenvolvedor</strong>
-        </li>
-        <li class="member-left">
           <a href="http://redu.com.br/pessoas/thaisbione">
             <img src="/img/membros-thais.png">
           </a>
@@ -120,7 +111,7 @@
           </h5>
           <strong>Desenvolvedora de front-end</strong>
         </li>
-        <li>
+        <li class="member-left">
           <a href="http://redu.com.br/pessoas/jessicab">
             <img src="/img/membros-jess.png">
           </a>
@@ -147,7 +138,7 @@
           </h5>
           <strong>Designer</strong>
         </li>
-        <li class="member-left">
+        <li>
           <a href="http://www.redu.com.br/pessoas/imahtmoura">
             <img src="/img/membros-thamires.png">
           </a>
@@ -156,7 +147,7 @@
           </h5>
           <strong>Oráculo</strong>
         </li>
-        <li>
+        <li class="member-left">
           <a href="http://www.redu.com.br/pessoas/brennbarros">
             <img src="/img/membros-brenda.png">
           </a>
@@ -182,6 +173,15 @@
             <a href="http://www.redu.com.br/pessoas/thiagosoara">Thiago <span class="ln">Araújo</span></a>
           </h5>
           <strong>Líder Técnico Mobile</strong>
+        </li>
+        <li>
+          <a href="http://redu.com.br/pessoas/gregory">
+            <img src="/img/membros-gregory.png">
+          </a>
+          <h5>
+            <a href="http://www.redu.com.br/pessoas/gregory">Gregory <span class="ln">Laborde</span></a>
+          </h5>
+          <strong>Representante Comercial</strong>
         </li>
       </ul>
 
