--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,10 @@
   <div class="call-wrapper">
     <div class="hack"></div>
     <section class="call">
-      <h2 class="header-call">Potencializando o talento das pessoas.</h2>
+      <div class="header-call-box">
+        <h2 class="header-call">Potencializando o talento das pessoas.</h2>
+        <iframe class="button-like-facebook" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Ftechredu&amp;send=false&amp;layout=box_count&amp;width=65&amp;show_faces=true&amp;font&amp;colorscheme=dark&amp;action=like&amp;height=90" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+      </div>
       <p>Olá, nós somos a Redu Educational Technologies. Uma empresa que começou no coração da universidade, nas mentes inquietas de educadores e alunos e na coragem de empreendedores preocupados em mudar o mundo. Pensamos que a Educação é um fator chave para o desenvolvimento do ser humano como sujeito e um agente transformador do atual contexto social de nossa sociedade.</p>
     </section>
   </div><!-- end .call-wrapper -->
@@ -28,9 +31,9 @@
       </a>
       <p>O <a href="#">Redu</a> é uma plataforma de ensino a distância que foi construída tendo como base as interações sociais, com diversas possibilidades de cooperação e aprendizagem: vídeo-aulas, artigos, documentos, exercícios, espaço para discussões, comunicação em tempo real (e muito mais).</p>
       <ul class="product-links">
-      	<li> <a href="http://blog.redu.com.br">Blog do Redu</a> </li>
-      	<li> <a href="http://www.redu.com.br/tos">Termos de uso</a> </li>
-      	<li> <a href="http://www.redu.com.br/privacy">Política de privacidade</a> </li>
+        <li> <a href="http://blog.redu.com.br">Blog do Redu</a> </li>
+        <li> <a href="http://www.redu.com.br/tos">Termos de uso</a> </li>
+        <li> <a href="http://www.redu.com.br/privacy">Política de privacidade</a> </li>
       </ul>
     </section>
 
