--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@
     <section class="call">
       <div class="header-call-box">
         <h2 class="header-call">Potencializando o talento das pessoas.</h2>
-        <iframe class="button-like-facebook" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Ftechredu&amp;send=false&amp;layout=box_count&amp;width=65&amp;show_faces=true&amp;font&amp;colorscheme=dark&amp;action=like&amp;height=90" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        <iframe class="button-like-facebook" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fredutech&amp;send=false&amp;layout=box_count&amp;width=65&amp;show_faces=false&amp;font&amp;colorscheme=dark&amp;action=like&amp;height=90" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
       </div>
       <p>Olá, nós somos a Redu Educational Technologies. Uma empresa que começou no coração da universidade, nas mentes inquietas de educadores e alunos e na coragem de empreendedores preocupados em mudar o mundo. Pensamos que a Educação é um fator chave para o desenvolvimento do ser humano como sujeito e um agente transformador do atual contexto social de nossa sociedade.</p>
     </section>
